2001-07-28  Andrew Cagney  <ac131313@redhat.com>

	* version.in: Bump version number to 5.0.90-cvs.

2001-07-28  Andrew Cagney  <ac131313@redhat.com>

	Fix some PID/TPID fallout for HP/UX.
	From 2001-07-22 Rodney Brown <rbrown64@csc.com.au>:
	* infttrace.c (ptrace_wait): Match external declaration,
	and match target_post_wait declaration.

2001-07-28  Andrew Cagney  <ac131313@redhat.com>

	* MAINTAINERS: Add Orjan Friberg as cris target maintainer.
	(cris): Set --enable-gdb-build-warnings flag to -w.

2001-07-28  Andrew Cagney  <ac131313@redhat.com>

	From 2001-07-23 Andreas Schwab <schwab@suse.de>:
	* config/m68k/tm-m68k.h (TARGET_LONG_DOUBLE_FORMAT): Define.
	(TARGET_LONG_DOUBLE_BIT): Define.
	(REGISTER_VIRTUAL_SIZE): Return 12 for floating point registers.
	(MAX_REGISTER_VIRTUAL_SIZE): Increase to 12.
	(REGISTER_VIRTUAL_TYPE): Return builtin_type_long_double for
	floating point registers.
	(REGISTER_CONVERTIBLE, REGISTER_CONVERT_TO_VIRTUAL)
	(REGISTER_CONVERT_TO_RAW): Remove.
	* config/m68k/xm-linux.h (HOST_LONG_DOUBLE_FORMAT): Define.

2001-07-26  Andrew Cagney  <ac131313@redhat.com>

	* thread.c, breakpoint.c: Include "gdb.h".
	* Makefile.in (gdb_h): Define.
	(HFILES_NO_SRCDIR): Add gdb.h.
	(mi-cmd-break.o, mi-main.o, thread.o)
	(breakpoint.o): Add dependency on $(gdb_h).

	* defs.h (enum gdb_rc, gdb_breakpoint_query)
	(gdb_breakpoint, gdb_thread_select)
	(gdb_list_thread_ids): Move declaration from here ...
	* gdb.h: To here.  New file.

2001-07-28  Stephane Carrez  <Stephane.Carrez@worldnet.fr>

	* Makefile.in (SUBDIR_TUI_OBS): Add tui-out.o, tui-hooks.o.
	(SUBDIR_TUI_SRCS): Add tui-out.c tui-hooks.c
	(SFILES): Likewise.
	(tui-out.o): Define dependencies.
	(tui-hooks.o): Likewise.

2001-07-28  Andrew Cagney  <ac131313@redhat.com>

	* MAINTAINERS: Update e-mail address of active @cygnus.com
	maintainers to @redhat.com.

2001-07-28  Andrew Cagney  <ac131313@redhat.com>

	* README (Known bugs): Delete section.
	(Kernel debugging): Delete section.